--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Pasadena night",
     "short_name": "Pasadena",
     "description": "Pasadena night home page",
-    "start_url": "/index.html",
+    "start_url": "/pasadena/index.html",
     "scope": "/",
     "display": "standalone"
   }
