--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,18 @@
     "description": "Pasadena night home page",
     "start_url": "/pasadena/index.html",
     "scope": "/",
-    "display": "standalone"
+    "icons": [
+      {
+        "src": "src/images/covers/beauty-of-night.jpg",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "src/images/covers/beauty-of-night.jpg",
+        "sizes": "512x512",
+        "type": "image/png"
+      }
+    ],
+    "display": "standalone",
+    "prefer_related_applications": "true"
   }
