--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,5 @@
     "display": "standalone",
     "prefer_related_applications": "true",
     "background_color": "#fff",
-    "theme_color": "#f0b937",
+    "theme_color": "#f0b937"
   }
