--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
       }
     ],
     "display": "standalone",
-    "prefer_related_applications": "true",
+    // "prefer_related_applications": "true",
     "background_color": "#fff",
     "theme_color": "#f0b937"
   }
